ikiwiki (2.43) UNRELEASED; urgency=low

  * Fix missing import of escapeHTML in userlink. (Scott Bronson)
  * Fix broken rcs_update for bzr. (Scott Bronson)

 -- Joey Hess <joeyh@debian.org>  Thu, 10 Apr 2008 17:36:53 -0400

ikiwiki (2.42) unstable; urgency=high

  * aggregate: Correct a mistake in the code that dummy up a guid for feeds
    lacking one.
  * inline: Correct handling of urls relative to baseurl in feeds.
  * Fix CSRF attacks against the preferences and edit forms. The fix involved
    embedding the session id in the forms, and not allowing the forms to be
    submitted if the embedded id does not match the session id. Closes: #475445

 -- Joey Hess <joeyh@debian.org>  Thu, 03 Apr 2008 02:35:39 -0400

ikiwiki (2.41) unstable; urgency=low

  [ Adeodato Simó ]
  * Preprocessor directives generated by the shortcut plugin accept a `desc`
    parameter that overrides the anchor text provided at shortcut definition
    time. (Closes: #458126)

  [ martin f. krafft ]
  * The meta plugin now allows for the robots tag to be specified without the
    risk of it being scrubbed.
  * Let meta.openid set X-XRDS-Location header
  * Make makerepo set the Git merge remote.
    branch.master.remote previously used to default to origin, which has
    recently been changed; it now needs to be set explicitly, which this
    patch does. Closes: #470517
  * meta: Also generate openid2 headers.
  * Handle SimpleXMLRPCDispatcher arg count change in python 2.5
  * Provide XML-RPC proxy abstraction for Python plugins.

  [ Joey Hess ]
  * Add recentchangesdiff plugin that adds diffs to the recentchanges feeds.
  * rcs_diff is a new function that rcs modules should implement.
  * Implemented rcs_diff for git, svn, and tla (tla version untested).
    Mercurial and monotone still todo.
  * Support Text::Markdown::markdown, which is the spelling used by 
    version 1.0.16 of Text::Markdown.
  * Updated Spanish translation from Victor Moral.