@@ -21,3 +21,8 @@ The fix is simply to call `bzr` with the _--quiet_ switch. Something like this a
 
 
 [[tag patch]]
+
+> [[done]], although I left off the escapeHTML thing which seems to be in
+> your patch by accident.
+> 
+> (Please use diff -u BTW..) --[[Joey]]
